Iris4Life.org  v1.0

--- a/css/AdminLTE.css
+++ b/css/AdminLTE.css
@@ -3851,7 +3851,7 @@ a:hover {
 .one-page-header.top-nav-collapse .navbar-brand,
 .one-page-header.top-nav-collapse .navbar-nav > li > a,
 .one-page-header.top-nav-collapse .navbar-nav > li > a:before {
-  color: #777;
+  color: #FFF;
 }
 
 .one-page-header.top-nav-collapse .navbar-brand {
