--- a/css/blocks.css
+++ b/css/blocks.css
@@ -457,7 +457,7 @@
   bottom: -15px;
   position: absolute;
   margin-left: -25px;
-  background: #CB2BA7;
+  background: #72C02C;
 }
 
 .service-box-v1 ul {
@@ -468,11 +468,11 @@
   margin: 8px 0;
   font-size: 15px;
   padding-top: 8px;
-  border-top: dotted 1px #CB2BA7;
+  border-top: dotted 1px #72C02C;
 }
 
 .service-box-v1 li:hover {
-  color: #CB2BA7;
+  color: #72C02C;
 }
 
 .service-box-v1 li:first-child {
@@ -501,7 +501,7 @@
   margin-left: -30px;
   text-align: center;
   position: absolute;
-  background: #CB2BA7;
+  background: #72C02C;
   display: inline-block;
 }
 
@@ -1434,7 +1434,8 @@
 .call-action-v1 .call-action-v1-box {
   width: 100%;
   display: table;
-  padding: 30px 0;
+  padding: 60px 0;
+  margin-top: -80px;
   vertical-align: middle;
 }
 
